@@ -213,7 +213,7 @@ int main(int argc, char *argv[])
 	mqtt3_log_init(config.log_type, config.log_dest);
 	_mosquitto_log_printf(NULL, MOSQ_LOG_INFO, "mosquitto version %s (build date %s) starting", VERSION, TIMESTAMP);
 
-	rc = mosquitto_security_init(&int_db);
+	rc = mosquitto_security_init(&int_db, false);
 	if(rc) return rc;
 
 	/* Set static $SYS messages */
@@ -316,7 +316,7 @@ int main(int argc, char *argv[])
 		_mosquitto_free(listensock);
 	}
 
-	mosquitto_security_cleanup(&int_db);
+	mosquitto_security_cleanup(&int_db, false);
 
 	if(config.pid_file){
 		remove(config.pid_file);
